--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,12 +24,15 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout source code
-        uses: actions/checkout@v2
+        uses: actions/checkout@master
 
       - name: Set up Node.js
         uses: actions/setup-node@master
         with:
-          node-version: 14.x 
+          node-version: 14.x
+      
+      - name: Install dependencies
+        run: yarn install
 
       - name: Build page
         run: yarn build
