--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -35,8 +35,8 @@ jobs:
       - name: Install dependencies
         run: yarn install
       
-      - name: Test unit
-        run: yarn test:unit
+      # - name: Test unit
+      #   run: yarn test:unit
 
       # Runs a set of commands using the runners shell
       - name: Build page
